[package]
name = "JC-server"
version = "0.1.0"
edition = "2021"
authors = ["jantar1154"]
license = "MIT"
description = "A tool to host JantarChat server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
rand = "0.8.5"
rs_sha384 = "0.1.3"
rsa = "0.9.2"
serde = { version = "1.0.164" , features = ["derive"] }
sqlite = "0.30.5"
